# Hubble

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  colors.h  commandListener.cpp  commandListener.h  commandManager.cpp  commandManager.h  dht22Query.hpp  dht22query.hpp  display.cpp  display.h  display.hpp  errorDisplay.h  faces.h  humd.txt  internetSpeed.cpp  internetSpeed.h  log.txt  main.cpp  nut.py  os.h  pyHelper.hpp  sensor.cpp  sensor.h  sensor.hpp  start.txt  tank.hpp  temp.txt  test.txt  thing.txt  weatherGetter.cpp  weatherGetter.h  weatherGetter.hpp
cmds/linux/: build.sh  go.sh  query.sh  view.sh
cmds/windows/: go.bat
depr/: internetSpeed.cpp  testHubbleObject.h  weatherGetter.h
include/: colors.h  commandListener.h  commandManager.h  commands.h  config.h  display.h  displayBlock.h  errorDisplay.h  ho_cpuTemp.h  ho_dht22.h  ho_internetSpeed.h  ho_weatherGetter.h  hubbleObject.h  internetSpeed.h  peripheral.h  pyHelper.hpp  sensor.h  testHubbleObject.h  weatherGetter.h
python/: runSensor.py
src/: commandListener.cpp  commandManager.cpp  display.cpp  errorDisplay.cpp  ho_cpuTemp.cpp  ho_dht22.cpp  ho_internetSpeed.cpp  ho_weatherGetter.cpp  hubbleObject.cpp  internetSpeed.cpp  peripheral.cpp  sensor.cpp  testHubbleObject.cpp  weatherGetter.cpp
